Content add another fix, and css overflow fix

--- a/src/app/sass/core/_base.scss
+++ b/src/app/sass/core/_base.scss
@@ -18,13 +18,6 @@ body {
   overflow-x : hidden; /* Prevent scroll on narrow devices */
 }
 
-@media only screen and (min-width : 845px) {
-  html,
-  body {
-    overflow : hidden; /* Prevent scroll on narrow devices */
-  }
-}
-
 html {
   height : 100%;
 }
